Cleanup code, remove unused settings property